Add missing documentation to path parameters
